# tcas-search-poc

./: .env.example  .gitignore  README.md  app.py  build_db.py  build_search_table.py  convert_all.py  enrich_seats.py  enrich_seats_fuzzy.py  fetch_catalog.py  llm_extract_prose.py  ocr_scanned.py  pyproject.toml  recover_missing.py  redo_r1.py  redo_targets.py  scrape_all.py  tesseract_ocr.py
data/: entrance_conditions.json
data/extracted/005_Thammasat_University/: 005_R3.md  (+4 more)
data/ml/: component_map.json  component_map_llm.json  unified_scores.csv
data/search/: programs.jsonl  tcas.db
docs/: LLM_FREE_PIPELINE.md  QUERY_PIPELINE.md  SYSTEM_DESIGN.md
ml/: cluster_components.py  myfit.py  normalize_components.py  query.py  score_topics.py
pipeline/: config.py  convert.py  extract_rb.py  llm.py  ocr.py  rb_all.py  run.py  thai_tokenize.py
pipeline/extractors/: criteria.py  list.py  matrix.py
scripts/: clean_markdowns.py  convert_pdfs_to_markdown.py  download_tcas_pdfs.py  extract_structured_per_program.py  inspect_tcas.py  reingest_clean_markdowns.py  reingest_cmu_chunks_only.py  reingest_cmu_only.py  structure_markdowns.py  warm_model.py
src/: chunking.py  compose.py  db.py  ingest.py  llm.py  nl_to_sql.py  router.py  validator.py  vector_search.py
tests/: conftest.py  test_chunking.py  test_compose.py  test_db.py  test_e2e_demo.py  test_ingest_pdf.py  test_ingest_tcas.py  test_llm.py  test_nl_to_sql_safety.py  test_router.py  test_validator.py  test_vector_search.py
tests/fixtures/: tcas_sample.json
tests/golden_qa/: demo_questions.json
web/: app.py
(+150 files in other folders)
