[project]
name = "thai-uni-qa-hybrid"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.30",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "markitdown[pdf]>=0.1.0",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "pythainlp>=4.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]